--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
-    "next": "15.2.5",
+    "next": "15.3.1-canary.11",
     "next-safe-action": "^7.10.5",
     "next-themes": "^0.4.6",
     "next-zod-route": "^0.2.5",
